@@ -1,5 +1,8 @@
 Revision history for Unicode-Digits
 
+20090607    2009-06-07/20:07:00
+        removed digits_to_dual due to bug in dualvar
+
 20090607    2009-06-07/19:14:00
         removed digits_to_dual due to bug in dualvar
 
